# disk-spinner

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  flake.nix  release.toml
.github/workflows/: ci_rust.yml  dependabot_regenerate_sri.yml  release_pr_for_crates_io.yml  release_to_crates_io.yml
src/: crypto.rs  garbage.rs  linux.rs  main.rs  other_os.rs  read_test.rs  write_test.rs
src/garbage/: aes.rs  blake3.rs
src/garbage/shishua/: cli.rs  mod.rs
src/linux/: platform_specific.rs
