[package]
name = "disk-spinner"
description = "A burn-in tool for spinning rust HDDs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/boinkor-net/disk-spinner"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
ctr = "0.9.2"
indicatif = "0.18.0"
lazy_static = "1.5.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-indicatif = "0.3.10"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "linux")'.dependencies]
block-utils = "0.11.1"

[dev-dependencies]
tracing-test = "0.2.5"
