[package]
name = "disk-spinner"
description = "A burn-in tool for spinning rust HDDs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/boinkor-net/disk-spinner"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
version = "0.2.0"
edition = "2021"

[features]
default = []
shishua-cli = []

[dependencies]
aes = "0.8.4"
anyhow = "1.0.99"
blake3 = "1.8.2"
clap = { version = "4.5.45", features = ["derive"] }
ctr = "0.9.2"
indicatif = "0.18.0"
lazy_static = "1.5.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
tracing = "0.1.41"
tracing-indicatif = "0.3.13"
tracing-subscriber = "0.3.19"

[target.'cfg(target_os = "linux")'.dependencies]
block-utils = "0.11.1"

[dev-dependencies]
test-case = "3.3.1"
tracing-test = "0.2.5"
